feat: sp5-07-api-update-profile-and-password
